Android: Clean input mod, Begin joystick settings

--- a/shell/android-studio/reicast/src/main/res/values/strings.xml
+++ b/shell/android-studio/reicast/src/main/res/values/strings.xml
@@ -98,6 +98,15 @@
     <string name="controller_unavailable">Gamepad IME detected!\nPlease disable native interface</string>
     <string name="enable_microphone">Enable Microphone(s)</string>
     <string name="controller_1_vmu">Includes 2 VMUs (or 1 VMU / 1 Mic)</string>
+
+    <string name="dpad_up">D-Pad Up</string>
+    <string name="dpad_down">D-Pad Down</string>
+    <string name="dpad_left">D-Pad Left</string>
+    <string name="dpad_right">D-Pad Right</string>
+    <string name="joystick_x">JS X Axis</string>
+    <string name="joystick_y">JS Y Axis</string>
+    <string name="start_button">Start Button</string>
+    <string name="select_button">Select Button</string>
     
     <string name="customize_physical_controls">Customize Physical Controls</string>
     <string name="map_keycode_title">Modify Controller</string>
