--- a/shell/android-studio/reicast/src/main/res/values/strings.xml
+++ b/shell/android-studio/reicast/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="select_syncrender">Synchronous Rendering</string>
     <string name="select_queuerender">Force Queue Rendering</string>
     <string name="select_modvols">Enable Modifier Volumes</string>
-    <string name="select_interrupt">Enable Interrupt Hack</string>
+    <string name="select_interrupt">Enable Delay Interrupt</string>
     <string name="select_fps">Show On-Screen FPS</string>
     <string name="select_software">Use Software Layer</string>
     <string name="select_sound">Disable Emulator Sound</string>
