--- a/shell/android-studio/reicast/src/main/res/values-de/strings.xml
+++ b/shell/android-studio/reicast/src/main/res/values-de/strings.xml
@@ -65,7 +65,7 @@
     <string name="controller_c">Controller C</string>
     <string name="controller_d">Controller D</string>
     <string name="controller_not_connected">Controller nicht verbunden</string>
-    <string name="controller_none_selected">Kein Controller ausgewählt</string>
+    <string name="controller_none_selected">Kein Controller ausgewählt %1$s</string>
     <string name="select">Auswählen</string>
     <string name="remove">Entfernen</string>
     <string name="select_controller_title">Controller auswählen</string>
