--- a/shell/android-studio/reicast/src/main/res/values-jp/strings.xml
+++ b/shell/android-studio/reicast/src/main/res/values-jp/strings.xml
@@ -48,7 +48,7 @@
     <string name="controller_b">コントローラB</string>
     <string name="controller_c">コントローラC</string>
     <string name="controller_d">コントローラD</string>
-    <string name="controller_not_connected">コントローラが接続されていません</string>
+    <string name="controller_not_connected">コントローラが接続されていません %1$s</string>
     <string name="controller_none_selected">コントローラが選択されていない。</string>
     <string name="select">選択する</string>
     <string name="remove">削除する</string>
