--- a/shell/android-studio/reicast/src/main/res/values-pl/strings.xml
+++ b/shell/android-studio/reicast/src/main/res/values-pl/strings.xml
@@ -18,6 +18,7 @@
     <string name="select_dynarec">Opcje Dynarec</string>
     <string name="select_unstable">Niestabilne optymalizacje</string>
     <string name="select_region">Region DC</string>
+    <string name="select_rtt">Renderuj do tekstury</string>
     <string name="select_limitfps">Limit FPS</string>
     <string name="select_mipmaps">Użyj Mipmap (fix dla starego SGX540)</string>
     <string name="select_stretch">Tryb Szerokoekranowy</string>
