Android: add Load Custom Textures option

--- a/shell/android-studio/reicast/src/main/res/values-fr/strings.xml
+++ b/shell/android-studio/reicast/src/main/res/values-fr/strings.xml
@@ -45,6 +45,7 @@ Last Edit: 21 May 2014
     <string name="select_software">Forcer le rendu logiciel</string>
     <string name="select_sound">Désactiver le son de l\'émulateur</string>
     <string name="select_depth">Rendu de profondeur</string>
+    <string name="select_customtex">Textures personnalisées</string>
 
     <string name="games_listing">Liste des jeux disponibles</string>
 
