--- a/shell/android-studio/reicast/src/main/res/values/strings.xml
+++ b/shell/android-studio/reicast/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="select_fps">Show On-Screen FPS</string>
     <string name="select_software">Use Software Layer</string>
     <string name="select_sound">Disable Emulator Sound</string>
+    <string name="select_dsp">Enable DSP</string>
     <string name="select_depth">View Rendering Depth</string>
     <string name="boot_disk">Boot Disk (ie. Gameshark, Utopia)</string>
     <string name="select_customtex">Load Custom Textures</string>
